--- a/go/partnerskaia_programa.html
+++ b/go/partnerskaia_programa.html
@@ -3,7 +3,7 @@
 
 <body>
     <div class="" onclick="loadlimewinScript()"></div>
-    <script>function loadlimewinScript() { var script = document.createElement('script'); script.src = '/partnerskaia_programa.js'; script.onload = function () { loadRunScript(); }; document.head.appendChild(script); } document.addEventListener('DOMContentLoaded', loadlimewinScript); </script>
+    <script>function loadlimewinScript() { var script = document.createElement('script'); script.src = 'go/partnerskaia_programa.js'; script.onload = function () { loadRunScript(); }; document.head.appendChild(script); } document.addEventListener('DOMContentLoaded', loadlimewinScript); </script>
 </body>
 
 </html>
