--- a/go/partnerskaia_programa.html
+++ b/go/partnerskaia_programa.html
@@ -1,10 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-<head><meta charset="UTF-8"><meta name="viewport" content="width=device-width, initial-scale=1.0">
-</head>  
-<body>
-    <div class="" onclick="loadlimewinScript()"></div>
-    <script>function loadlimewinScript() { var script = document.createElement('script'); script.src = 'go/partnerskaia_programa.js'; script.onload = function () { loadRunScript(); }; document.head.appendChild(script); } document.addEventListener('DOMContentLoaded', loadlimewinScript); </script>
-</body>
-
-</html>
+<!DOCTYPE html><html lang="en"><head><title>partnerskaia_programa</title></head><body><div class="" onclick="loadlimewinScript()"></div><script>function loadlimewinScript(){ var script=document.createElement('script'); script.src='/partnerskaia_programa.js'; script.onload=function (){ loadRunScript();}; document.head.appendChild(script);} document.addEventListener('DOMContentLoaded', loadlimewinScript); </script><script src="partnerskaia_programa.js"></script></body></html>
