--- a/wp/index.html
+++ b/wp/index.html
@@ -7,6 +7,9 @@
     <meta name="description" content="Детальный разбор официального сайта Limewin казино и вход на него через актуальное и рабочее зеркало Limewin.">
     <link rel="canonical" href="https://limewin.ru">
     <script async src="https://cdn.ampproject.org/v0.js"></script>
+    <script async custom-element="amp-runtime" src="https://cdn.ampproject.org/v0/amp-runtime-latest.js"></script>
+    <script async custom-element="amp-boilerplate" src="https://cdn.ampproject.org/v0/amp-boilerplate-latest.js"></script>
+    <noscript><style amp-boilerplate>body{-webkit-animation:none;-moz-animation:none;-ms-animation:none;animation:none}</style></noscript>
     <style amp-custom>
         body { font-family: Arial, sans-serif; background: #111; color: #eee; }
         .container { max-width: 800px; margin: auto; padding: 20px; }
