--- a/en/index.html
+++ b/en/index.html
@@ -41,14 +41,14 @@ html
         rel="stylesheet" />
     <title>Limewin casino Official site - Limewin Casino Mirror - Entrance</title>
     <meta
-        content="Детальный разбор официального сайта Limewin казино и вход на него через актуальное и рабочее зеркало Limewin."
+        content="A detailed analysis of the official website of Limewin casino and access to it through the current and working Limewin mirror."
         name="description" />
     <link href="https://limewin.ru" rel="canonical" />
     <meta content="ru_RU" property="og:locale" />
     <meta content="website" property="og:type" />
-    <meta content="Limewin казино официальный сайт - Limewin casino зеркало - Вход" property="og:title" />
+    <meta content="Limewin casino official website - Limewin casino mirror - Login" property="og:title" />
     <meta
-        content="Детальный разбор официального сайта Limewin казино и вход на него через актуальное и рабочее зеркало Limewin."
+        content="A detailed analysis of the official website of Limewin casino and access to it through the current and working Limewin mirror."
         property="og:description" />
     <meta content="https://limewin.ru/" property="og:url" />
     <meta content="Lime win casino" property="og:site_name" />
